h1 overlapping fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,54 +1,38 @@
 .all {
-  position: relative;
-  bottom: 100px;
+  text-align: center;
 }
 .all,
 form {
-  text-align: center;
   line-height: 30px;
 }
-input {
-  width: 80%;
-}
-button {
-  position: relative;
-  bottom: 2px;
-}
+
 h1,
 h2,
 h4 {
   text-align: left;
-  position: relative;
-  left: 100px;
-  bottom: 50px;
 }
 h1 {
-  padding-top: 150px;
   font-family: "Roboto Condensed", sans-serif;
-  font-weight: regular 400;
+  font-weight: 400;
 }
 h2 {
   font-family: "Roboto Condensed", sans-serif;
-  font-weight: light 300;
+  font-weight: 300;
 }
 h3 {
-  text-align: right;
-  position: relative;
-  bottom: 100px;
-  right: 100px;
   font-family: "Roboto Condensed", sans-serif;
-  font-weight: regular 400;
+  font-weight: 400;
 }
 h4 {
   font-family: "Roboto Condensed", sans-serif;
-  font-weight: light 300;
-  position: relative;
-  bottom: 100px;
+  font-weight: 300;
   text-transform: capitalize;
 }
 body {
   background-image: url("https://crawfordcountynow.sagacom.com/files/2021/04/shutterstock_169613126.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+  min-height: calc(100vh - 30px);
 }
 #humidity,
 #wind {
@@ -59,20 +43,8 @@ body {
   color: #3c638f;
 }
 
-.first-day {
-  position: relative;
-  left: 5px;
-}
-.day {
-  position: relative;
-  top: 24px;
-  right: 5px;
-}
 #linkrep {
   color: #3c638f;
-  position: relative;
-  top: 50px;
-  left: 520px;
   margin: 0 auto;
   padding: 4px;
   border: 1px solid #dadde1;
@@ -80,10 +52,13 @@ body {
   background-color: #fff;
 }
 .container {
+  max-width: 800px;
+}
+
+.weatherApp {
   background-color: #bedcf7;
-  max-width: 500px;
-  margin: 30px auto;
   padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 10px;
+  margin: 30px auto;
 }
